Added font styles

--- a/style.css
+++ b/style.css
@@ -1,1 +1,51 @@
-/* Use Selectors and attributes for the HTML design */
+/* Use Selectors and attributes for the HTML design 
+
+*/
+.title{
+    text-transform: capitalize;
+    text-decoration:wavy;
+    text-shadow: 2px 2px rgb(rgba(73, 27, 27, 0.253), rgb(72, 134, 72), rgb(50, 50, 61) 30%);
+    letter-spacing: 5px;
+    font-variant: small-caps;
+    color: rgba(59, 35, 194,30%);
+    font-family: 'Stalinist One', cursive;  
+    text-decoration: line-through; 
+    font-size: xx-large;
+}
+
+.subtitle{
+    text-transform:lowercase;
+    text-decoration:wavy;
+    text-shadow: 2px 2px rgba(65, 36, 36, 0.25);
+    letter-spacing: 5px;
+    font-variant: small-caps;
+    color:red;
+    font-family: 'Indie Flower', cursive;   
+     text-decoration: underline;
+    font-size:x-large;
+
+}
+
+.style{
+    text-transform:uppercase;
+    text-decoration:wavy;
+    text-shadow: 2px 2px rgba(65, 36, 36, 0.25);
+    letter-spacing: 5px;
+    font-variant:normal;
+    color:rgb(228, 193, 38);
+    font-family: 'Dancing Script', cursive;
+    text-decoration: underline;
+    font-size:large;
+}
+
+.substyle{
+    text-transform:uppercase;
+    text-decoration:wavy;
+    text-shadow: 2px 2px rgba(65, 36, 36, 0.25);
+    letter-spacing: 5px;
+    font-variant:normal;
+    color:rgba(2, 2, 2, 0.5);
+    font-family: 'Indie Flower', cursive;
+    text-decoration: underline;
+    font-size:medium;
+}
